add_executable(all_of all_of.cpp)
add_executable(any_of any_of.cpp)
add_executable(adjacent_find adjacent_find.cpp)
add_executable(count count.cpp)
add_executable(count_if count_if.cpp)
add_executable(find find.cpp)
add_executable(find_if_not find_if_not.cpp)
add_executable(for_each for_each.cpp)
add_executable(for_each_n for_each_n.cpp)
add_executable(mismatch mismatch.cpp)
add_executable(none_of none_of.cpp)
add_executable(search search.cpp)
